<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <TextView
            android:layout_width="97dp"
            android:layout_height="43dp"
            android:text="@string/detail"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="30sp"
            android:paddingLeft="10dp" />

        <Spinner
            android:layout_width="260dp"
            android:layout_height="36dp"
            android:id="@+id/spinner"
            android:layout_row="0"
            android:layout_column="1"
            android:spinnerMode="dropdown"
            android:layoutMode="clipBounds" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/amount"
            android:id="@+id/textView2"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="20dp"
            android:textSize="27sp"
            android:paddingLeft="10dp" />

        <EditText
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:id="@+id/amount"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginTop="20dp"
            android:text="@string/_0" />
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:textSize="20sp"
        android:textColor="#030303"
        android:layout_gravity="center_horizontal" />
</LinearLayout>