<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.spender.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_amount_spent"
        android:id="@+id/amt_spnt"
        android:onClick="add_amount"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar"
        android:id="@+id/cal"
        android:onClick="calender"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/amt_spnt"
        android:layout_alignStart="@+id/amt_spnt"
        android:layout_alignEnd="@+id/amt_spnt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_todays_amount"
        android:id="@+id/tdays_amt"
        android:onClick="todays_amt"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/cal"
        android:layout_alignEnd="@+id/cal"
        android:layout_alignStart="@+id/cal" />


</RelativeLayout>
